NEWS - OpenPrinting CUPS Filters v1.11.1 - 2016-08-18
-----------------------------------------------------

CHANGES IN V1.11.2

	- bannertopdf, foomatic-rip, gstoraster, mupdftoraster,
	  pdftoopvp, pdftoraster: Do not use build-time hard-coded
	  paths, but always the paths from the environment variables
	  which CUPS sets when calling its filters. This is needed to
	  run the printing stack in a sandbox.

CHANGES IN V1.11.1

	- mupdftoraster: Lowered the priority (raised the cost value)
	  in the cupsfilters-mupdf.convs file so that in a full
	  cups-filters installation MuPDF is not prioritized.

CHANGES IN V1.11.0

	- pdftops: Added support for MuPDF as PDF renderer. MuPDF can
	  be selected by the "pdftops-renderer=mupdf" option.
	- rastertops: Removed unneeded page logging.
	- rastertops: Fixed DSC comments, some were only preceded by
	  a single '%' instead of a double "%%".
	- gstoraster, pdftops, foomatic-rip: Use -dNOMEDIAATTRS when
	  calling Ghostscript. This way Ghostscript does not try to
	  match media sizes with internal lists.
	- Build system: Allow building cups-filters without Poppler
	  (--disable-poppler in ./configure command line) This skips
	  the build of pdftoraster, bannertopdf, pdftoijs, and
	  pdftoopvp and the installation of these filters and their
	  auxiliary files. With this cups-filters can be easily
	  installed on mobile/appliance systems with MuPDF as the only
	  PDF interpreter.
	- mupdftoraster: Added filter to support MuPDF as PDF
	  interpreter. MuPDF is a lightweight PDF interpreter
	  especially interesting for mobile systems and
	  appliances. Thanks to Pranjal Bhor for contributing this as
	  part of his Google Summer of Code project.
	- gstoraster: Fix setting of width and height of the page in
	  pixels when there is no Resolution option in the PPD.
	- cups-browsed, implicitclass: Avoid the use of files for the
	  communication between cups-browsed and the load-balancing